# canvas-mcp

./: .coverage  .gitignore  .mcpbignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CLEANUP_STATE.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSION_ENHANCEMENTS.md  Dockerfile  LEARNINGS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFACTORING_TEST_RESULTS.md  RUBRIC_FEATURES.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  TODO.md  auto_review_test.py  automate_testing.sh  canvas-mcp-article-substack.txt  canvas-mcp-article.md  canvas_server_cached.py  canvas_server_refactored.py  debug_peer_review_api.py  env.template  fix_readme.py  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.json  session-history.md  start_canvas_server.sh
.claude/plans/: entra-oauth-mcp-auth.md  future-proofing-adoption.md  impact-tracker.md  implementation-review.md  learning-designer-skill.md  search-discoverability.md
.github/workflows/: README.md  auto-update-docs.yml  canvas-mcp-testing.yml  ci.yml  claude-code-review.yml  collect-traffic-stats.yml  create-release.yml  deploy-prod.yml  deploy-staging.yml  publish-mcp.yml  security-scan.yml  security-testing.yml  weekly-maintenance.yml
Build AI Product Sense/: AGENTS.md  GOALS.md  lyrics.txt
archive/: canvas_server_cached.py
articles/: 2026-02-23-the-moment-your-side-project-stops-being-yours.html  2026-02-23-the-moment-your-side-project-stops-being-yours.md  2026-03-01-canvas-mcp-meets-skills-sh.html  2026-03-01-canvas-mcp-meets-skills-sh.md
benchmarks/: benchmark_cache.py
cleanup/: GLOBAL_ARCH.md
cli/: README.md  package-lock.json  package.json
cli/lib/: clients.js  config-writer.js  wizard.js
cli/test/: config-writer.test.js
config/overlays/: README.md  baseline.env  enterprise.env  public.env
core/: __init__.py  client.py  dates.py  types.py  validation.py
deploy/: canvas-mcp.service  nginx-canvas-mcp.conf  setup.sh
docs/: .assetsignore  API_IMPROVEMENTS.md  API_REFERENCE.md  CLAUDE.md  EDUCATOR_GUIDE.md  PAGES_IMPLEMENTATION.md  PERFORMANCE.md  SECURITY-COMPLIANCE.md  SECURITY_AUDIT_REPORT.md  SECURITY_GUIDE.md  SKILLS_IMPROVEMENT_ANALYSIS.md  SKILLS_QUICK_START.md  STUDENT_GUIDE.md  UIUC_SECURITY_EXECUTIVE_SUMMARY.md  WORKFLOWS.md  architecture-review.md  bulk-grading.html  claude_codeveloper_5day_sprint.md  claude_codeveloper_experience.md  educator-guide.html  hybrid_builder_launch.md  impact-metrics-2026-03-20.md  index.html  learning-designer-guide.html  llms.txt  mcp-apps-feasibility.md  research-appservice-mcp-entra.md  session-history.md  student-guide.html  styles.css  tech-services-dns-cname-typo.txt  tech-services-dns-request-correction.txt  tech-services-dns-request.txt  workshop.html
docs/adr/: 001-modular-architecture.md  002-data-anonymization.md  README.md  (+3 more)
examples/: common_issues.md  educator_grading_workflow.md  educator_quickstart.md  real_world_workflows.md  student_quickstart.md  student_workflow_example.md
internal/: README.md  SECURITY-COMPLIANCE.md  architecture-review.md  architecture.md  release-checklist.md  session-history.md
resources/: __init__.py  resources.py
scripts/: build-mcpb.sh  collect-impact-stats.sh  dev_workflow.py  install.py  monitoring_dashboard.py  rotate-canvas-token.mjs
smithery-wrapper/: package-lock.json
tests/: README.md  conftest.py  test_cli_access.py  test_dates.py  test_fastmcp2_compat.py  test_fastmcp_compat.py  test_http_transport.py  test_role_filtering.py  test_token_efficiency.py
tools/: README.md  TOOL_MANIFEST.json  __init__.py  assignments.md  assignments.py  courses.md  courses.py  discussions.md  discussions.py  other_tools.md  other_tools.py  rubrics.md  rubrics.py
(+178 files in other folders)
